--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -32,14 +32,10 @@
 <hr/>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
-<p>STL VIEWER ON BROWSER</p>
-<script src="/get_page/HW1/jsc3d.js" type="text/javascript"></script>
-<h1>STL VIEWER</h1>
-<div style="width: 800px; margin: auto; position: relative; font-size: 9pt; color: #777777;"><canvas height="600" id="cv" style="border: 1px solid;" width="800"></canvas>
-<div id="tip" style="display: block; color: #000000; padding: 5px; position: absolute; left: 10px; top: 550px; background-color: #c0c0c0; height: 32px; width: 250px; border-radius: 5px; border: 1px solid #000000; font-family: Arial,sans-serif; opacity: 0.5;">Drag mouse to rotate <br/> Drag mouse with shift pressed to zoom</div>
-</div>
-<h2>View Edit</h2>
-<div style="width: 800px; margin-left: 50px; height: 70px; border: 1px solid;">Model Color:<input id="mdlClr" onchange="changeOption('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40"/> Back Color1:<input id="bckClr1" onchange="changeOption('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color"/> Back Color2:<input id="bckClr2" onchange="changeOption('BackgroundColor2',this.value)" type="color"/><br/> Render Mode:<select id="render" onchange="changeOption('RenderMode',this.value)" style="margin-right: 50px;">
+<p></p>
+<script src="/static/jsc3d.js" type="text/javascript"></script>
+<p><canvas height="600" id="cv" style="border: 1px solid;" width="800"></canvas></p>
+<div style="width: 800px; height: 70px; border: 1px solid;">Model Color:<input id="mdlClr" onchange="changeOption('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40"/> Back Color1:<input id="bckClr1" onchange="changeOption('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color"/> Back Color2:<input id="bckClr2" onchange="changeOption('BackgroundColor2',this.value)" type="color"/><br/> Render Mode:<select id="render" onchange="changeOption('RenderMode',this.value)">
 <option>Flat</option>
 <option>Point</option>
 <option>Wireframe</option>
@@ -49,9 +45,8 @@
 <option>low</option>
 <option>high</option>
 </select></div>
-<p><br/> This web application do not support the InternetExplorer.</p>
 <script type="text/javascript">
-    var viewer3d;
+var viewer3d;
     function getOptions(){
         var mc = document.getElementById("mdlClr").value;
         var bc1 = document.getElementById("bckClr1").value;
@@ -107,9 +102,7 @@
         reader.readAsDataURL(f);
     }
     function openByGet(){
-        var q = GetQueryString();
-        console.log(q);
-        var url = q.src;
+        var url = "https://s104.cycu.org/~41223131/41223131_part1.stl";
         var opt = getOptions();
         opt.SceneUrl = url;
         readSTLfile(opt);
@@ -131,11 +124,8 @@
         }
         return null;
     }
-    window.onload = function(){
-        openByGet();
-    }
+    openByGet();
 </script>
-<p></p>
 <p>利用 Solvespace 繪製列表中零件的操作過程與說明影片如下:</p>
 <p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之一</p>
 <p style="padding-left: 30px;">所完成的零件檔案下載</p>
@@ -151,7 +141,8 @@
 <p>HW1 執行心得:</p>
 <p style="padding-left: 30px;">......</p>
 <p>HW1 自評分數:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 HW1 自評分數輸入 cad2024 自評表單中.</p><h2>HW1_Exam</h2>
+<p style="padding-left: 30px;">完成上述流程後, 請將 HW1 自評分數輸入 cad2024 自評表單中.</p>
+<h2>HW1_Exam</h2>
 <p>從<a href="http://229.cycu.org/part_modeling_projects.pdf">零件模擬練習</a>中選出零件, 隨堂進行考試.</p>
 <p>零件考試題目以 Solvespace 繪圖操作過程影片如下:</p>
 <p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
