w1和W2課程心得

--- a/config/content.htm
+++ b/config/content.htm
@@ -19,14 +19,20 @@
 <p>出席 (10%) - 自行舉證評分</p>
 <p>自行利用 Github commits 提交記錄評分.</p>
 <h1>W1</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe>第一周主要是熟悉近端codespaces的操作方式</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe></p>
+<p>1.第一周主要是先建立github的作業網站</p>
+<p>2.複習過往的作業建立的方法</p>
+<h1>W2</h1>
 <p>1.首先進入codespaces</p>
 <p>2.建立一個新的終端機</p>
-<p>3.在init_replit裡找到  <span>pip</span><span> </span><span>install</span><span> </span><span>flask</span><span> </span><span>flask_cors</span><span> </span><span>bs4</span><span> </span><span>lxml</span><span> </span><span>pelican</span><span> </span><span>markdown</span><span> </span><span>gevent</span></p>
+<p>3.在init_replit裡找到  <span>pip</span><span> </span><span>install</span><span> </span><span>flask</span><span> </span><span>flask_cors</span><span> </span><span>bs4</span><span> </span><span>lxml</span><span> </span><span>pelican</span><span> </span><span>markdown</span><span> </span><span>gevent</span></p>
 <p><span>4.在終端機複製上面的程式代碼</span></p>
 <p>  執行動態-----python3 main.py</p>
 <p>  執行靜態-----python3 main2.py</p>
-<h1>W2</h1>
+<p>5.推上到靜態網頁上</p>
+<p>    git add .</p>
+<p>    git commit -m"新增要推上去的簡介"</p>
+<p>    git push</p>
 <h1>W3</h1>
 <p>1.填寫github帳號到excel上</p>
 <p>2.教solvespace畫圖</p>
