--- a/content/W1.html
+++ b/content/W1.html
@@ -142,13 +142,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Attendance << <a href='Attendance.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe>第一周主要是熟悉近端codespaces的操作方式</p>
-<p>1.首先進入codespaces</p>
-<p>2.建立一個新的終端機</p>
-<p>3.在init_replit裡找到  <span>pip</span><span> </span><span>install</span><span> </span><span>flask</span><span> </span><span>flask_cors</span><span> </span><span>bs4</span><span> </span><span>lxml</span><span> </span><span>pelican</span><span> </span><span>markdown</span><span> </span><span>gevent</span></p>
-<p><span>4.在終端機複製上面的程式代碼</span></p>
-<p>  執行動態-----python3 main.py</p>
-<p>  執行靜態-----python3 main2.py</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe></p>
+<p>1.第一周主要是先建立github的作業網站</p>
+<p>2.複習過往的作業建立的方法</p>
 <br />Attendance << <a href='Attendance.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
         
     <!-- footer -->
