--- a/content/W2.html
+++ b/content/W2.html
@@ -142,6 +142,16 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='W3.html'>Next</a> >> W3<br /><h1>W2</h1>
+<p>1.首先進入codespaces</p>
+<p>2.建立一個新的終端機</p>
+<p>3.在init_replit裡找到  <span>pip</span><span> </span><span>install</span><span> </span><span>flask</span><span> </span><span>flask_cors</span><span> </span><span>bs4</span><span> </span><span>lxml</span><span> </span><span>pelican</span><span> </span><span>markdown</span><span> </span><span>gevent</span></p>
+<p><span>4.在終端機複製上面的程式代碼</span></p>
+<p>  執行動態-----python3 main.py</p>
+<p>  執行靜態-----python3 main2.py</p>
+<p>5.推上到靜態網頁上</p>
+<p>    git add .</p>
+<p>    git commit -m"新增要推上去的簡介"</p>
+<p>    git push</p>
 <br />W1 << <a href='W1.html'>Previous</a> <a href='W3.html'>Next</a> >> W3</div>
         
     <!-- footer -->
