tmp匯入置網頁上操作的方法

--- a/config/content.htm
+++ b/config/content.htm
@@ -138,6 +138,9 @@ var viewer3d;
     }
     openByGet();
 </script>
+<p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
+<p><img alt="" height="400" src="/images/tmp圖檔.jpg" width="800"/></p>
+<p><span style="color: #333300;">上面為tmp匯入置網頁上操作的方法</span></p>
 <p>利用 Solvespace 繪製列表中零件的操作過程與說明影片如下:</p>
 <p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之一</p>
 <p style="padding-left: 30px;">所完成的零件檔案下載</p>
