第二張零件圖

--- a/config/content.htm
+++ b/config/content.htm
@@ -138,6 +138,10 @@ var viewer3d;
     }
     openByGet();
 </script>
+<p>以下為第二張零件圖操作方法</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/MffZ2goFbFs" title="虎尾科大第二張圖" width="1020"></iframe></p>
+<p><img alt="" height="336" src="/images/第二張圖檔.jpg" width="631"/></p>
 <p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
 <p><img alt="" height="400" src="/images/tmp圖檔.jpg" width="800"/></p>
 <p><span style="color: #333300;">上面為tmp匯入置網頁上操作的方法</span></p>
