--- a/content/w7.html
+++ b/content/w7.html
@@ -141,15 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW2_Exam << <a href='HW2_Exam.html'>Previous</a> <a href='HW3_Exam.html'>Next</a> >> HW3_Exam<br /><h1>HW3</h1>
-<p>Homework 3 (20%):</p>
-<p style="padding-left: 30px;">建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 控制系統設計模擬場景</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecycu/Balance_On_Wheels">https://github.com/mdecycu/Balance_On_Wheels</a></p>
-<p style="padding-left: 30px;"><img alt="" height="217" src="https://mde.tw/cad2024/images/balance_on_wheels.png" width="400"/></p>
-<p style="padding-left: 30px;"><img alt="" height="217" src="https://mde.tw/cad2024/images/Balance_on_wheels_scene.png" width="400"/></p>
-<p style="padding-left: 30px;"><a href="https://mde.tw/cad2024/downloads/Balance_on_wheels_nx2312.7z">Balance_on_wheels_nx2312.7z</a></p>
-<p style="padding-left: 30px;"><a href="https://mde.tw/cad2024/downloads/Balance_on_Wheel_scene.7z">Balance_on_Wheel_scene.7z</a></p>
-<br />HW2_Exam << <a href='HW2_Exam.html'>Previous</a> <a href='HW3_Exam.html'>Next</a> >> HW3_Exam</div>
+    <div id="tipue_search_content">W3 << <a href='W3.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>w7</h1>
+<p>1.下載並嘗試開啟NX檔案匯入</p>
+<p>2.分組利用solvespaces畫圖，<a href="https://support.industrysoftware.automation.siemens.com/training/se/en/ST3/pdf/spse01550.pdf">圖檔畫到第32頁</a></p>
+<br />W3 << <a href='W3.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
