練習一的圖

--- a/content/Base plate.html
+++ b/content/Base plate.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,30 +141,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Base plate << <a href='Base plate.html'>Previous</a> <a href='HW1_Exam.html'>Next</a> >> HW1_Exam<br /><h1>HW1</h1>
-<p>Homework 1 (10%):</p>
+    <div id="tipue_search_content">練習 << <a href='練習.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>Base plate</h1>
 <p></p>
-<p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
-<p style="padding-left: 30px;">其他<a href="http://229.cycu.org/part_modeling_projects.pdf">零件模擬練習</a></p>
-<hr/>
-<p><span style="color: #333300;">上面為tmp匯入置網頁上操作的方法</span></p>
-<p>利用 Solvespace 繪製列表中零件的操作過程與說明影片如下:</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之一</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之二</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p style="padding-left: 30px;">......</p>
-<p>利用 NX2312 繪製列表中零件的操作過程與說明影片如下:</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之三</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之四</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p style="padding-left: 30px;">......</p>
-<p>HW1 執行心得:</p>
-<p style="padding-left: 30px;">......</p>
-<p>HW1 自評分數:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 HW1 自評分數輸入 cad2024 自評表單中.</p>
-<br />Base plate << <a href='Base plate.html'>Previous</a> <a href='HW1_Exam.html'>Next</a> >> HW1_Exam</div>
+<p></p>
+<p></p>
+<br />練習 << <a href='練習.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
