--- a/config/content.htm
+++ b/config/content.htm
@@ -39,16 +39,14 @@
 <h1>w7</h1>
 <p>1.下載並嘗試開啟NX檔案匯入</p>
 <p>2.分組利用solvespaces畫圖，<a href="https://support.industrysoftware.automation.siemens.com/training/se/en/ST3/pdf/spse01550.pdf">圖檔畫到第32頁</a></p>
-<h1>HW1</h1>
-<p>Homework 1 (10%):</p>
-<p></p>
-<p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立 <a href="https://mde.tw/cad2024/content/Parts.html">Parts</a> 頁面中的零件</p>
-<p style="padding-left: 30px;">其他<a href="http://229.cycu.org/part_modeling_projects.pdf">零件模擬練習</a></p>
-<hr/>
+<h1>Part</h1>
+<h2>練習</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
 <p></p>
+<p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
+</p>
 <p><canvas height="600" id="cv" style="border: 1px solid;" width="800"></canvas></p>
 <div style="width: 800px; height: 70px; border: 1px solid;">Model Color:<input id="mdlClr" onchange="changeOption('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40"/> Back Color1:<input id="bckClr1" onchange="changeOption('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color"/> Back Color2:<input id="bckClr2" onchange="changeOption('BackgroundColor2',this.value)" type="color"/><br/> Render Mode:<select id="render" onchange="changeOption('RenderMode',this.value)">
 <option>Flat</option>
@@ -60,6 +58,7 @@
 <option>low</option>
 <option>high</option>
 </select></div>
+<p>
 <script type="text/javascript">
 var viewer3d;
     function getOptions(){
@@ -141,12 +140,17 @@ var viewer3d;
     }
     openByGet();
 </script>
-<p>以下為第二張零件圖操作方法</p>
+</p>
+<h2>Base plate</h2>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/MffZ2goFbFs" title="虎尾科大第二張圖" width="1020"></iframe></p>
-<p><img alt="" height="336" src="/images/第二張圖檔.jpg" width="631"/></p>
-<p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
-<p><img alt="" height="400" src="/images/tmp圖檔.jpg" width="800"/></p>
+<p></p>
+<p></p>
+<h1>HW1</h1>
+<p>Homework 1 (10%):</p>
+<p></p>
+<p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
+<p style="padding-left: 30px;">其他<a href="http://229.cycu.org/part_modeling_projects.pdf">零件模擬練習</a></p>
+<hr/>
 <p><span style="color: #333300;">上面為tmp匯入置網頁上操作的方法</span></p>
 <p>利用 Solvespace 繪製列表中零件的操作過程與說明影片如下:</p>
 <p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之一</p>
