--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -36,6 +36,9 @@
 <h1>W3</h1>
 <p>1.填寫github帳號到excel上</p>
 <p>2.教solvespace畫圖</p>
+<h1>w7</h1>
+<p>1.下載並嘗試開啟NX檔案匯入</p>
+<p>2.分組利用solvespaces畫圖，<a href="https://support.industrysoftware.automation.siemens.com/training/se/en/ST3/pdf/spse01550.pdf">圖檔畫到第32頁</a></p>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
