--- a/content/練習.html
+++ b/content/練習.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,30 +141,108 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Base plate << <a href='Base plate.html'>Previous</a> <a href='HW1_Exam.html'>Next</a> >> HW1_Exam<br /><h1>HW1</h1>
-<p>Homework 1 (10%):</p>
+    <div id="tipue_search_content">Part << <a href='Part.html'>Previous</a> <a href='Base plate.html'>Next</a> >> Base plate<br /><h1>練習</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
-<p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
-<p style="padding-left: 30px;">其他<a href="http://229.cycu.org/part_modeling_projects.pdf">零件模擬練習</a></p>
-<hr/>
-<p><span style="color: #333300;">上面為tmp匯入置網頁上操作的方法</span></p>
-<p>利用 Solvespace 繪製列表中零件的操作過程與說明影片如下:</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之一</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之二</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p style="padding-left: 30px;">......</p>
-<p>利用 NX2312 繪製列表中零件的操作過程與說明影片如下:</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之三</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業一之四</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p style="padding-left: 30px;">......</p>
-<p>HW1 執行心得:</p>
-<p style="padding-left: 30px;">......</p>
-<p>HW1 自評分數:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 HW1 自評分數輸入 cad2024 自評表單中.</p>
-<br />Base plate << <a href='Base plate.html'>Previous</a> <a href='HW1_Exam.html'>Next</a> >> HW1_Exam</div>
+<p></p>
+<p>
+<script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
+</p>
+<p><canvas height="600" id="cv" style="border: 1px solid;" width="800"></canvas></p>
+<div style="width: 800px; height: 70px; border: 1px solid;">Model Color:<input id="mdlClr" onchange="changeOption('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40"/> Back Color1:<input id="bckClr1" onchange="changeOption('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color"/> Back Color2:<input id="bckClr2" onchange="changeOption('BackgroundColor2',this.value)" type="color"/><br/> Render Mode:<select id="render" onchange="changeOption('RenderMode',this.value)">
+<option>Flat</option>
+<option>Point</option>
+<option>Wireframe</option>
+<option>Smooth</option>
+</select>Definition:<select id="defini" onchange="changeOption('Definition',this.value)">
+<option>Standard</option>
+<option>low</option>
+<option>high</option>
+</select></div>
+<p>
+<script type="text/javascript">
+var viewer3d;
+    function getOptions(){
+        var mc = document.getElementById("mdlClr").value;
+        var bc1 = document.getElementById("bckClr1").value;
+        var bc2 = document.getElementById("bckClr2").value;
+        var ren = document.getElementById("render").value;
+        var def = document.getElementById("defini").value;
+        return {ModelColor: mc,
+                BackgroundColor1: bc1,
+                BackgroundColor2: bc2,
+                RenderMode: ren,
+                Definition: def};
+    }
+    function readSTLfile(opt){
+        var canvas = document.getElementById('cv');
+        viewer3d = new JSC3D.Viewer(canvas);
+        viewer3d.setParameter('SceneUrl', opt.SceneUrl);
+        viewer3d.setParameter('InitRotationX', 0);
+        viewer3d.setParameter('InitRotationY', 0);
+        viewer3d.setParameter('InitRotationZ', 0);
+        viewer3d.setParameter('ModelColor', opt.ModelColor);
+        viewer3d.setParameter('BackgroundColor1', opt.BackgroundColor1);
+        viewer3d.setParameter('BackgroundColor2', opt.BackgroundColor2);
+        viewer3d.setParameter('RenderMode', opt.RenderMode);
+        viewer3d.setParameter('Definition', opt.Definition);
+        viewer3d.init();
+        viewer3d.update();
+    }
+    function changeOption(strOpt,strValue){
+    console.log("change " + strOpt + " to " + strValue);
+        viewer3d.setParameter(strOpt, strValue);
+        viewer3d.init();
+        viewer3d.update();
+    }
+    function openByUrl(){
+        var url = document.getElementById("url").value;
+        var opt = getOptions();
+        opt.SceneUrl = document.getElementById("url").value;
+        readSTLfile(opt);
+    }
+    function openByPass(){
+        var pass = document.getElementById("url").value;
+        var opt = getOptions();
+        var fs = document.getElementById("pass").files;
+        var f = fs[0];
+        var reader = new FileReader();
+        reader.onload = (function(theFile) {
+            return function(e) {            
+                opt.SceneUrl = e.target.result;
+                console.log(opt.SceneUrl);
+                readSTLfile(opt);
+            };
+        })(f);
+        reader.readAsDataURL(f);
+    }
+    function openByGet(){
+        var url = "https://s104.cycu.org/~41223131/41223131_part1.stl";
+        var opt = getOptions();
+        opt.SceneUrl = url;
+        readSTLfile(opt);
+    }
+    function GetQueryString(){
+        if( 1 < window.location.search.length )
+        {
+            var query = window.location.search.substring( 1 );
+            var parameters = query.split( '&' );
+            var result = new Object();
+            for( var i = 0; i < parameters.length; i++ )
+            {
+                var element = parameters[ i ].split( '=' );
+                var paramName = decodeURIComponent( element[ 0 ] );
+                var paramValue = decodeURIComponent( element[ 1 ] );
+                result[ paramName ] = decodeURIComponent( paramValue );
+            }
+            return result;
+        }
+        return null;
+    }
+    openByGet();
+</script>
+</p>
+<br />Part << <a href='Part.html'>Previous</a> <a href='Base plate.html'>Next</a> >> Base plate</div>
         
     <!-- footer -->
       <div class="container">
