--- a/content/Base Plate.html
+++ b/content/Base Plate.html
@@ -143,11 +143,11 @@ img.add_border {
         </header>
     <div id="tipue_search_content">練習 << <a href='練習.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>Base Plate</h1>
 <p></p>
+<script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part2-1.stl">模型1</a> <!-- 第一題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1"></div>
-<p>
 <script type="text/javascript">
 // 函數用來動態生成模型部件
 function createModelPart(index, url, ytUrl, title) {
@@ -229,7 +229,7 @@ function createModelPart(index, url, ytUrl, title) {
 function initModelParts() {
     var links = document.querySelectorAll('#modelLinks1 a');
     var ytLinks = [
-        'https://www.youtube.com/watch?v=KnZUK0JmUB8', // 第一題的影片
+        'https://www.youtube.com/embed/KnZUK0JmUB8', // 第一題的影片
     ];
     
     var titles = ['Base Plate']; // 題目標題
@@ -240,8 +240,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-</p><br />練習 << <a href='練習.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+</script><br />練習 << <a href='練習.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
