Guide plate圖檔和stl檔案

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -730,7 +730,7 @@ function createModelPart(index, url, ytUrl, title) {
 function initModelParts() {
     var links = document.querySelectorAll('#modelLinks1 a');
     var ytLinks = [
-        'https://www.youtube.com/byuGshn9T-4', // 第一題的影片
+        'https://www.youtube.com/embed/byuGshn9T-4', // 第一題的影片
     ];
     
     var titles = ['Gland blank']; // 題目標題
@@ -741,7 +741,10 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h1>HW1</h1>
+</script>
+<h2>Giude plate</h2>
+<p></p>
+<h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
