--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -18,11 +18,12 @@
 <h1>Attendance</h1>
 <p>出席 (10%) - 自行舉證評分</p>
 <p>自行利用 Github commits 提交記錄評分.</p>
-<h1>W1</h1>
+<h1>Week</h1>
+<h2>W1</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe></p>
 <p>1.第一周主要是先建立github的作業網站</p>
 <p>2.複習過往的作業建立的方法</p>
-<h1>W2</h1>
+<h2>W2</h2>
 <p>1.首先進入codespaces</p>
 <p>2.建立一個新的終端機</p>
 <p>3.在init_replit裡找到  <span>pip</span><span> </span><span>install</span><span> </span><span>flask</span><span> </span><span>flask_cors</span><span> </span><span>bs4</span><span> </span><span>lxml</span><span> </span><span>pelican</span><span> </span><span>markdown</span><span> </span><span>gevent</span></p>
@@ -33,10 +34,10 @@
 <p>    git add .</p>
 <p>    git commit -m"新增要推上去的簡介"</p>
 <p>    git push</p>
-<h1>W3</h1>
+<h2>W3</h2>
 <p>1.填寫github帳號到excel上</p>
 <p>2.教solvespace畫圖</p>
-<h1>w7</h1>
+<h2>W7</h2>
 <p>1.下載並嘗試開啟NX檔案匯入</p>
 <p>2.分組利用solvespaces畫圖，<a href="https://support.industrysoftware.automation.siemens.com/training/se/en/ST3/pdf/spse01550.pdf">圖檔畫到第32頁</a></p>
 <h1>Part</h1>
@@ -829,7 +830,7 @@ function createModelPart(index, url, ytUrl, title) {
 function initModelParts() {
     var links = document.querySelectorAll('#modelLinks1 a');
     var ytLinks = [
-        'https://www.youtube.com/mSZHi4vCsk4, // 第一題的影片
+        'https://www.youtube.com/embed/mSZHi4vCsk4', // 第一題的影片
     ];
     
     var titles = ['Gland']; // 題目標題
@@ -840,7 +841,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h2>Giude plate</h2>
+</script>
+<h2>Giude plate</h2>
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
