W1的上課整理修改

--- a/config/content.htm
+++ b/config/content.htm
@@ -21,9 +21,8 @@
 <h1>Week</h1>
 <h2>W1</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe></p>
-<p>1.第一周主要是先建立github的作業網站</p>
-<p>2.複習過往的作業建立的方法</p>
-<h2>W2</h2>
+<p>1.第一周主要是先建立github的作業網站，replit已無法再使用，所以只能使用近端開啟動態網頁</p>
+<p>2.複習過往的作業建立的方法</p><h2>W2</h2>
 <p>1.首先進入codespaces</p>
 <p>2.建立一個新的終端機</p>
 <p>3.在init_replit裡找到  <span>pip</span><span> </span><span>install</span><span> </span><span>flask</span><span> </span><span>flask_cors</span><span> </span><span>bs4</span><span> </span><span>lxml</span><span> </span><span>pelican</span><span> </span><span>markdown</span><span> </span><span>gevent</span></p>
