--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -40,7 +40,7 @@
 <h2>W7</h2>
 <p>1.下載並嘗試開啟NX檔案匯入</p>
 <p>2.分組利用solvespaces畫圖，<a href="https://support.industrysoftware.automation.siemens.com/training/se/en/ST3/pdf/spse01550.pdf">圖檔畫到第32頁</a></p>
-<h1>Part</h1>
+<h1>Parts</h1>
 <h2>練習</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
