--- a/content/W1.html
+++ b/content/W1.html
@@ -143,9 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Week << <a href='Week.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe></p>
-<p>1.第一周主要是先建立github的作業網站</p>
-<p>2.複習過往的作業建立的方法</p>
-<br />Week << <a href='Week.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+<p>1.第一周主要是先建立github的作業網站，replit已無法再使用，所以只能使用近端開啟動態網頁</p>
+<p>2.複習過往的作業建立的方法</p><br />Week << <a href='Week.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
         
     <!-- footer -->
       <div class="container">
