W10測驗的stl檔案和影片

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -21,7 +21,7 @@
 <h1>Week</h1>
 <h2>W1</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe></p>
-<p>1.第一周主要是先建立github的作業網站</p>
+<p>1.第一周主要是先建立github的作業網站，replit已無法再使用，所以只能使用近端開啟動態網頁</p>
 <p>2.複習過往的作業建立的方法</p>
 <h2>W2</h2>
 <p>1.首先進入codespaces</p>
@@ -40,6 +40,7 @@
 <h2>W7</h2>
 <p>1.下載並嘗試開啟NX檔案匯入</p>
 <p>2.分組利用solvespaces畫圖，<a href="https://support.industrysoftware.automation.siemens.com/training/se/en/ST3/pdf/spse01550.pdf">圖檔畫到第32頁</a></p>
+<p></p>
 <h1>Parts</h1>
 <h2>練習</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
@@ -973,6 +974,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>零件考試題目以 NX2312 繪圖操作過程影片如下:</p>
 <p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
 <p style="padding-left: 30px;">所完成的零件檔案下載</p>
+<h2>W10</h2>
 <h1>HW2</h1>
 <p>Homework 2 (10%):</p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX 建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件</p>
