Head yoke的stl檔和影片檔案

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -943,6 +943,7 @@ function initModelParts() {
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
+<h2>Head yoke</h2>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
@@ -1061,7 +1062,7 @@ function createModelPart(index, url, ytUrl, title) {
 function initModelParts() {
     var links = document.querySelectorAll('#modelLinks1 a');
     var ytLinks = [
-        'https://www.youtube.com/embed/KJg0sngbf0I', // 第一題的影片
+        'https://www.youtube.com/embed/p1Bi0oC1Iiw', // 第一題的影片
     ];
     
     var titles = ['W10測驗']; // 題目標題
@@ -1072,7 +1073,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h1>HW2</h1>
+</script>
+<h1>HW2</h1>
 <p>Homework 2 (10%):</p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX 建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件</p>
 <hr/>
