W10的考試利用NX來畫並且測試

--- a/content/W10NX.html
+++ b/content/W10NX.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,8 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Attendance << <a href='Attendance.html'>Previous</a> <a href='W1.html'>Next</a> >> W1<br /><h1>Week</h1>
-<br />Attendance << <a href='Attendance.html'>Previous</a> <a href='W1.html'>Next</a> >> W1</div>
+    <div id="tipue_search_content">W10 << <a href='W10.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2<br /><h1>W10NX</h1>
+<p>W10的考試利用NX來畫並且測試</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/sl3TUBU5-rI" title="W10 NX的操作影片" width="956"></iframe></p><br />W10 << <a href='W10.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
         
     <!-- footer -->
       <div class="container">
