--- a/config/content.htm
+++ b/config/content.htm
@@ -143,9 +143,6 @@ var viewer3d;
     openByGet();
 </script>
 </p>
-<p>
-<script src="/static/jsc3d.js" type="text/javascript"></script>
-</p>
 <h2>Base Plate</h2>
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
@@ -245,7 +242,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h2>Bearing block A</h2>
+</script>
+<h2>Bearing block A</h2>
 <p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
@@ -1040,7 +1038,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h2>Head yoke</h2>
+</script>
+<h2>Head yoke</h2>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part11.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -1269,7 +1268,9 @@ function initModelParts() {
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
-<h1>HW2</h1>
+<h3>W10NX</h3>
+<p>W10的考試利用NX來畫並且測試</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/sl3TUBU5-rI" title="W10 NX的操作影片" width="956"></iframe></p><h1>HW2</h1>
 <p>Homework 2 (10%):</p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX 建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件</p>
 <hr/>
