--- a/content/HW2.html
+++ b/content/HW2.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Week.html'>Week</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W7.html'>W7</a></li></ul><li class='has-children'><a href='Parts.html'>Parts</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='W10.html'>W10</a></li></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Week.html'>Week</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W7.html'>W7</a></li></ul><li class='has-children'><a href='Parts.html'>Parts</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='W10NX.html'>W10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W10 << <a href='W10.html'>Previous</a> <a href='HW2_Exam.html'>Next</a> >> HW2_Exam<br /><h1>HW2</h1>
+    <div id="tipue_search_content">W10NX << <a href='W10NX.html'>Previous</a> <a href='HW2_Exam.html'>Next</a> >> HW2_Exam<br /><h1>HW2</h1>
 <p>Homework 2 (10%):</p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX 建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件</p>
 <hr/>
@@ -155,7 +155,7 @@ img.add_border {
 <p style="padding-left: 30px;">......</p>
 <p>HW2 自評分數:</p>
 <p style="padding-left: 30px;">完成上述流程後, 請將 HW2 自評分數輸入 cad2024 自評表單中.</p>
-<br />W10 << <a href='W10.html'>Previous</a> <a href='HW2_Exam.html'>Next</a> >> HW2_Exam</div>
+<br />W10NX << <a href='W10NX.html'>Previous</a> <a href='HW2_Exam.html'>Next</a> >> HW2_Exam</div>
         
     <!-- footer -->
       <div class="container">
