w7的內容修改和增加

--- a/config/content.htm
+++ b/config/content.htm
@@ -40,8 +40,12 @@
 <h2>W7</h2>
 <p>1.下載並嘗試開啟NX檔案匯入</p>
 <p>2.分組利用solvespaces畫圖，<a href="https://support.industrysoftware.automation.siemens.com/training/se/en/ST3/pdf/spse01550.pdf">圖檔畫到第32頁</a></p>
-<p></p>
-<h1>Parts</h1>
+<p>3.開啟NX的操作步驟如下:</p>
+<p><span>①先下載 <span style="text-decoration: underline;">NX2312_CAD</span> 和 <span style="text-decoration: underline;">python_2025_lite</span></span></p>
+<p>②解壓縮到自己USB裡面的資料夾裡面</p>
+<p><span>③解壓縮完把兩個檔案合併 NX2312合併到python裡面並且改檔名為NX</span></p>
+<p><span>④開啟ipv6 並且把ipv6裡面的內容移動到空的ipv6裡面</span></p>
+<p><span>⑤開啟 C:\Windows\system32\cmd.exe 並且輸入 ugraf --nx 即可完成。</span></p><h1>Parts</h1>
 <h2>練習</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
