--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1269,7 +1269,8 @@ function initModelParts() {
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
 <h3>W10NX</h3>
-<h1>HW2</h1>
+<p>W10的考試利用NX來畫並且測試</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/sl3TUBU5-rI" title="W10 NX的操作影片" width="956"></iframe></p><h1>HW2</h1>
 <p>Homework 2 (10%):</p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX 建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件</p>
 <hr/>
