--- a/content/W7.html
+++ b/content/W7.html
@@ -144,8 +144,12 @@ img.add_border {
     <div id="tipue_search_content">W3 << <a href='W3.html'>Previous</a> <a href='Parts.html'>Next</a> >> Parts<br /><h1>W7</h1>
 <p>1.下載並嘗試開啟NX檔案匯入</p>
 <p>2.分組利用solvespaces畫圖，<a href="https://support.industrysoftware.automation.siemens.com/training/se/en/ST3/pdf/spse01550.pdf">圖檔畫到第32頁</a></p>
-<p></p>
-<br />W3 << <a href='W3.html'>Previous</a> <a href='Parts.html'>Next</a> >> Parts</div>
+<p>3.開啟NX的操作步驟如下:</p>
+<p><span>①先下載 <span style="text-decoration: underline;">NX2312_CAD</span> 和 <span style="text-decoration: underline;">python_2025_lite</span></span></p>
+<p>②解壓縮到自己USB裡面的資料夾裡面</p>
+<p><span>③解壓縮完把兩個檔案合併 NX2312合併到python裡面並且改檔名為NX</span></p>
+<p><span>④開啟ipv6 並且把ipv6裡面的內容移動到空的ipv6裡面</span></p>
+<p><span>⑤開啟 C:\Windows\system32\cmd.exe 並且輸入 ugraf --nx 即可完成。</span></p><br />W3 << <a href='W3.html'>Previous</a> <a href='Parts.html'>Next</a> >> Parts</div>
         
     <!-- footer -->
       <div class="container">
