parts的標題概述和操作方法

--- a/config/content.htm
+++ b/config/content.htm
@@ -52,7 +52,7 @@
 <p><span>④開啟ipv6 並且把ipv6裡面的內容移動到空的ipv6裡面</span></p>
 <p><span>⑤開啟 C:\Windows\system32\cmd.exe 並且輸入 ugraf --nx 即可完成。</span></p>
 <h2>W9</h2>
-<p>1.打其中自評成績</p>
+<p>1.打期中自評成績</p>
 <p>2.分析NX的在職場發展與作用</p>
 <p>ChatGPT:</p>
 <p><span>①Siemens NX 是一款高端 CAD/CAM/CAE 軟體，廣泛應用於<span style="color: #00ff00;">產品設計</span>、<span style="color: #00ff00;">製造</span>和<span style="color: #00ff00;">工程分析</span>。</span></p>
@@ -63,8 +63,21 @@
 <p><span>①</span>無可比擬的功能、完整整合的產品開發、優越的生產力、高效能產品設計、整合的工業設計、機電系統設計、視覺化分析和驗證等</p>
 <p><span>倆者繪圖簡述比較:</span></p>
 <p><span>    ①Solvespaces:可畫較簡易的3D圖形設計分析。<br/></span></p>
-<p>    <span>②</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功  能。</p><h1>Parts</h1>
-<h2>練習</h2>
+<p>    <span>②</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功  能。</p>
+<p></p>
+<h2>W11</h2>
+<p></p>
+<p></p><h1>Parts</h1>
+<p>1.利用solvespaces畫圖完成後</p>
+<p>2.在<span style="text-decoration: underline;">File</span> 中找到<span style="text-decoration: underline;"> Export Triangle Mesh</span></p>
+<p>3.存到公用下載中，並且改檔名為 412231XX_part1.stl</p>
+<p>4.存完後，開啟cmd檔案</p>
+<p>5.輸入如下</p>
+<p><img alt="" height="400" src="/images/tmp圖檔.jpg" width="800"/></p>
+<p>6.若成功之後在新分頁輸入如下修改小部分即可開啟:<a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl"></a></p>
+<p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
+<p>7.開啟老師給html的程式碼並且在裡面如上面修改成自己的html網站網址，把code放置在自己網站中即可完成。</p>
+<p></p><h2>練習</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
 <p></p>
