--- a/content/W9.html
+++ b/content/W9.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W7.html'>W7</a><li><a href='W9.html'>W9</a></li></ul><li class='has-children'><a href='Parts.html'>Parts</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='W10NX.html'>W10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W7.html'>W7</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a></li></ul><li class='has-children'><a href='Parts.html'>Parts</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='W10NX.html'>W10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='Parts.html'>Next</a> >> Parts<br /><h1>W9</h1>
-<p>1.打其中自評成績</p>
+    <div id="tipue_search_content">W7 << <a href='W7.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W9</h1>
+<p>1.打期中自評成績</p>
 <p>2.分析NX的在職場發展與作用</p>
 <p>ChatGPT:</p>
 <p><span>①Siemens NX 是一款高端 CAD/CAM/CAE 軟體，廣泛應用於<span style="color: #00ff00;">產品設計</span>、<span style="color: #00ff00;">製造</span>和<span style="color: #00ff00;">工程分析</span>。</span></p>
@@ -153,7 +153,9 @@ img.add_border {
 <p><span>①</span>無可比擬的功能、完整整合的產品開發、優越的生產力、高效能產品設計、整合的工業設計、機電系統設計、視覺化分析和驗證等</p>
 <p><span>倆者繪圖簡述比較:</span></p>
 <p><span>    ①Solvespaces:可畫較簡易的3D圖形設計分析。<br/></span></p>
-<p>    <span>②</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功  能。</p><br />W7 << <a href='W7.html'>Previous</a> <a href='Parts.html'>Next</a> >> Parts</div>
+<p>    <span>②</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功  能。</p>
+<p></p>
+<br />W7 << <a href='W7.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
     <!-- footer -->
       <div class="container">
